# taskwarrior-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
mcp-server/: .semgrepignore  pyproject.toml
mcp-server/.semgrep/: rules.yml
mcp-server/src/taskwarrior_mcp/: __init__.py  __main__.py  config.py  models.py  server.py  taskwarrior.py
mcp-server/tests/: conftest.py
mcp-server/tests/integration/: test_tools.py
mcp-server/tests/unit/: test_models.py  test_taskwarrior.py
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: task-manager.md  task-reviewer.md
plugin/commands/: task-inbox.md  task-plan.md  task-review.md  task-sync.md
plugin/hooks/: hooks.json
plugin/skills/taskwarrior/: SKILL.md
