[project]
name = "taskwarrior-mcp"
version = "0.1.0"
description = "MCP server for Taskwarrior — use with Claude Code, Claude Desktop, or any MCP client"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.25,<2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
taskwarrior-mcp = "taskwarrior_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
